added new classes, new rest api method